# cd_exercise

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml
.github/workflows/steps/: 05-rollback.yml  06-complete.yml
scripts/: setup.sh
src/: __init__.py
src/app/: __init__.py  health.py  main.py
tests/: __init__.py  test_health.py  test_main.py
